Updated main pages and added readings

--- a/scholarlywork.html
+++ b/scholarlywork.html
@@ -50,123 +50,89 @@
                 <p>Byerley, C., Hatfield, N. J., &amp; Thompson, P. W. (2012). Calculus Student Understandings of Division and Rate. In S. Brown, S. Larsen, K. Marrongelle, &amp; M. Oehrtman (Eds.), <em>Proceedings
               of the 15th Annual Conference on Research in Undergraduate
               Mathematics Education</em> (pp. 358–363). Portland, Oregon: Mathematical Association of America. </p>
+               <br />
+               <br />
                 <h2 id="Presentations"><a name="Presentations"></a>Presentations<br />
           </h2>
                 <h3>The United States Conference on Teaching Statistics--May 2019--State College, PA</h3>
-                Hatfield, N. J. (May 2019).<br />
-                Students' Images of Randomness Post-Instruction.<br />
-                <br />
+                <p>Hatfield, N. J. (May 2019).<br />
+                Students' Images of Randomness Post-Instruction.</p>
                 <h3>International Conference on Teaching Statistics--July 2018--Kyoto, Japan</h3>
-                Hatfield, N. J. (July 2018).<br />
-                Students' Conveyed Meanings for Probability.<br />
-                <br />
-                Hatfield, N. J. (July 2018).<br />
-                The Challenges of Teaching Probability, Session Chair<br />
-                <br />
+                <p>Hatfield, N. J. (July 2018).<br />
+                Students' Conveyed Meanings for Probability.</p>
+                <p>Hatfield, N. J. (July 2018).<br />
+                The Challenges of Teaching Probability, Session Chair</p>
                 <h3>ASU University Academic Success Programs--September 2017--Tempe, AZ</h3>
-                Hatfield, N. J. (2017).<br />
-                Tutoring for Classes Focused on Conceptual Understanding<br />
-                <br />
+                <p>Hatfield, N. J. (2017).<br />
+                Tutoring for Classes Focused on Conceptual Understanding</p>
                 <h3>Research in Undergraduate Mathematics Education XIX--February
-            25-27, 2016--Pittsburgh, PA</h3> Hatfield, N. J. (2016).
-                <br /> Probabilistic Thinking: An Initial Look at Students' Meanings for Probability
-                <br />
-                <h3>ASU Graduate Statistics Club--October 7th, 2015--Tempe, AZ</h3> Hatfield, N. J. (2015).
-                <br /> Bootstrapping Across Platforms
-                <br />
+            25-27, 2016--Pittsburgh, PA</h3> 
+               <p>Hatfield, N. J. (2016). <br />
+                   Probabilistic Thinking: An Initial Look at Students' Meanings for Probability</p>
+                <h3>ASU Graduate Statistics Club--October 7th, 2015--Tempe, AZ</h3> 
+                <p>Hatfield, N. J. (2015). <br />
+                    Bootstrapping Across Platforms</p>
                 <h3>Research in Undergraduate Mathematics Education XVIII--February
-            19-21, 2015--Pittsburgh, PA</h3> Musgrave, S., Hatfield, N. J., &amp; Thompson, P. W. (2015).
-                <br /> Teachers' Meanings for the Substitution Principle
-                <br />
-                <br /> Musgrave, S., Hatfield, N. J., &amp; Thompson, P. W. (2015).
-                <br /> Calculus Students' Meanings for Difference
-                <br />
-                <br /> Joshua, S., Musgrave, S., Hatfield, N. J., &amp; Thompson, P. W. (2015).
-                <br /> Frames of Reference
-                <br />
-                <br />
+            19-21, 2015--Pittsburgh, PA</h3> 
+               <p>Musgrave, S., Hatfield, N. J., &amp; Thompson, P. W. (2015).<br />
+                   Teachers' Meanings for the Substitution Principle</p>
+               <p>Musgrave, S., Hatfield, N. J., &amp; Thompson, P. W. (2015).<br />
+                   Calculus Students' Meanings for Difference </p>
+                <p>Joshua, S., Musgrave, S., Hatfield, N. J., &amp; Thompson, P. W. (2015).<br /> 
+                    Frames of Reference</p>
                 <h3>38th Meeting of the International Group for the Psychology of
-            Mathematics Education--July 15-20, 2014--Vancouver, BC, Canada</h3> Yoon, H., Hatfield, N. J., &amp; Thompson, P. W. (2014).
-                <br /> Teachers' Meanings for Function Notation
-                <br />
-                <br />
+            Mathematics Education--July 15-20, 2014--Vancouver, BC, Canada</h3> 
+               <p>Yoon, H., Hatfield, N. J., &amp; Thompson, P. W. (2014).<br />
+                   Teachers' Meanings for Function Notation</p>
                 <h3>Research in Undergraduate Mathematics Education XVI--February
-            21-23, 2013--Denver, CO</h3> Hatfield, N. J. (2013).
-                <br /> The Action, Process, Object, and Schema Theory of Sampling/Sampling Distribution
-                <br />
+            21-23, 2013--Denver, CO</h3> 
+               <p>Hatfield, N. J. (2013).<br /> 
+                   The Action, Process, Object, and Schema Theory of Sampling/Sampling Distribution<br />
                 <a href="resources/scholar/presentations/2013.APOS-Sampling.key" class="bodylinks">Keynote</a>
                 <br />
                 <a href="resources/scholar/presentations/2013.APOS-Sampling.pptx" class="bodylinks">PowerPoint</a>
                 <br />
-                <a target="_blank" class="bodylinks" href="http://dl.dropbox.com/u/62311376/2013.RUME.APOS-Sampling.Hatfield.pdf">Livescribe
-            Pencast PDF</a>
-                <br />
-                <br /> Byerley, C. and Hatfield, N. J. (2013).
-                <br /> Pre-Service Secondary Teachers' Meanings for Fractions and Division
-                <br />
-                <br /> Thompson, P. W., Hatfield, N. J., Byerley, C., and Carlson, M. P. (2013).
-                <br /> Under the Radar: Foundational Meanings that Secondary Mathematics Teachers Need, Do Not Have, but Colleges Assume
-                <br />
-                <br />
-                <h3>Joint Mathematics Meetings--January 9-12, 2013--San Diego, CA</h3> Byerley, C., &amp; Hatfield, N. J. (2013).
-                <br /> University Calculus Students' Meanings for Fraction and Quotient
-                <br />
-                <br /> Byerley, C., Hatfield, N. J., Carlson, M., &amp; Thompson, P. W. (2013).
-                <br /> Assessing High School Teachers' Mathematical Meanings for Teaching Secondary Mathematics
-                <br />
-                <br />
-                <h3>AMS Sectional Meeting--March 31, 2012--Lawrence, KS</h3> Thompson, P. W., Hatfield, N. J., &amp; Byerley, C. (2012).
-                <br />
-                <a href="resources/scholar/presentations/20120331.Tech&amp;Calc.AMS.Neil.key" class="bodylinks">An
-            Approach to Calculus Made Possible by Technology</a> (Keynote)
-                <br />
-                <br />
+                   <a target="_blank" class="bodylinks" href="http://dl.dropbox.com/u/62311376/2013.RUME.APOS-Sampling.Hatfield.pdf">LivescribePencast PDF</a></p>
+                <p>Byerley, C. and Hatfield, N. J. (2013).<br /> 
+                    Pre-Service Secondary Teachers' Meanings for Fractions and Division</p>
+                <p>Thompson, P. W., Hatfield, N. J., Byerley, C., and Carlson, M. P. (2013).<br /> 
+                    Under the Radar: Foundational Meanings that Secondary Mathematics Teachers Need, Do Not Have, but Colleges Assume</p>
+                <h3>Joint Mathematics Meetings--January 9-12, 2013--San Diego, CA</h3> 
+                <p>Byerley, C., &amp; Hatfield, N. J. (2013).<br /> 
+                    University Calculus Students' Meanings for Fraction and Quotient</p>
+                <p>Byerley, C., Hatfield, N. J., Carlson, M., &amp; Thompson, P. W. (2013).<br /> 
+                    Assessing High School Teachers' Mathematical Meanings for Teaching Secondary Mathematics</p>
+                <h3>AMS Sectional Meeting--March 31, 2012--Lawrence, KS</h3> 
+                <p>Thompson, P. W., Hatfield, N. J., &amp; Byerley, C. (2012).<br />
+                An Approach to Calculus Made Possible by Technology</p>
                 <h3>Research in Undergraduate Mathematics Education XV--February
-            23-25, 2012--Portland, OR</h3> Byerley, C., Hatfield, N. J., &amp; Thompson, P. W. (2012).
-                <br />
-                <a href="resources/scholar/papers/RUME15_Paper78.pdf" class="bodylinks">RUME
-            XV Paper</a> (PDF)
+            23-25, 2012--Portland, OR</h3> 
+               <p>Byerley, C., Hatfield, N. J., &amp; Thompson, P. W. (2012).<br />
+                <a href="resources/scholar/papers/RUME15_Paper78.pdf" class="bodylinks">RUME XV Paper</a> (PDF)
                 <br />
                 <a href="resources/scholar/presentations/RUMEXV_Byerley_Hatfield_Thompson.pptx" class="bodylinks">Calculus
-            Student Understandings of Quotient and Rate</a> (PowerPoint)
-                <br />
-                <br />
+                    Student Understandings of Quotient and Rate</a> (PowerPoint)</p>
                 <h3>NCTM Annual Meeting and Exposition--April 15th,
-            2011--Indianapolis, IN</h3> Hatfield, N. J. (2011).
-                <br /> Raising Achievement through Reading and Writing Mathematics with Undergraduate Students
-                <br />
-                <a href="resources/scholar/papers/Thesis%20Paper.pdf" class="bodylinks">Research
-            Paper</a> (PDF)
-                <br />
+            2011--Indianapolis, IN</h3> 
+               <p>Hatfield, N. J. (2011). <br /> 
+               Raising Achievement through Reading and Writing Mathematics with Undergraduate Students<br />
+                <a href="resources/scholar/papers/Thesis%20Paper.pdf" class="bodylinks">Research Paper</a> (PDF) <br />
                 <a href="resources/scholar/presentations/NCTM%20Reading%20and%20Writing.pptx" class="bodylinks">NCTM
-            PowerPoint</a>
-                <br />
-                <br />
-                <h3>Math Olympiad--March 17, 2011--Northwest Missouri State University</h3> Hatfield, N. J. (2011).
-                <br /> Tanks, Planes, and UNICEF: Reasoning and Sense Making with Data Analysis
-                <br />
-                <a href="resources/scholar/presentations/Tanks,%20Planes,%20and%20UNICEF.pptx" class="bodylinks">Presentation
-            for the teachers</a> (PowerPoint)
-                <br /> Additional Resources:
-                <br />
-                <a href="resources/scholar/presentations/How%20Statistics%20Won%20World%20War%20II.pptx" class="bodylinks">How
-            Statistics Won World War II</a> (a.k.a. "Tanks") (PowerPoint)
-                <br /> Supporting Materials: <a href="resources/scholar/presentations/Group%20Data%20Sheet.pdf" class="bodylinks">Group
-            Data Sheet</a>, <a href="resources/scholar/presentations/Number%20Cards.pdf" class="bodylinks">Number
-            Cards</a>, <a href="resources/scholar/presentations/Graphs.pdf" class="bodylinks">Graphs</a> (PDFs)
-                <br />
-                <a href="resources/scholar/presentations/Where%20to%20put%20the%20Armor.pptx" class="bodylinks">Where
-            to Put the Armor</a> (a.k.a. "Planes") (PowerPoint)
-                <br /> Supporting Materials: <a href="resources/scholar/presentations/Plane%20Data.pdf" class="bodylinks">Plane
-            Data</a> (PDF)
-                <br />
+                    PowerPoint</a></p>
+                <h3>Math Olympiad--March 17, 2011--Northwest Missouri State University</h3> 
+                <p>Hatfield, N. J. (2011). <br /> Tanks, Planes, and UNICEF: Reasoning and Sense Making with Data Analysis<br />
+                <a href="resources/scholar/presentations/Tanks,%20Planes,%20and%20UNICEF.pptx" class="bodylinks">Presentation for the teachers</a> (PowerPoint)<br /> 
+               Additional Resources:<br />
+                <a href="resources/scholar/presentations/How%20Statistics%20Won%20World%20War%20II.pptx" class="bodylinks">How Statistics Won World War II</a> (a.k.a. "Tanks") (PowerPoint)<br /> 
+                Supporting Materials: <a href="resources/scholar/presentations/Group%20Data%20Sheet.pdf" class="bodylinks">Group Data Sheet</a>, <a href="resources/scholar/presentations/Number%20Cards.pdf" class="bodylinks">Number Cards</a>, <a href="resources/scholar/presentations/Graphs.pdf" class="bodylinks">Graphs</a> (PDFs)<br />
+                <a href="resources/scholar/presentations/Where%20to%20put%20the%20Armor.pptx" class="bodylinks">Where to Put the Armor</a> (a.k.a. "Planes") (PowerPoint)<br /> 
+                Supporting Materials: <a href="resources/scholar/presentations/Plane%20Data.pdf" class="bodylinks">Plane
+            Data</a> (PDF)<br />
                 <a href="resources/scholar/presentations/What%20Does%20It%20Really%20Show.pptx" class="bodylinks">What
-            does it <i>Really</i> Show?</a> (a.k.a. "UNICEF) (PowerPoint)
-                <br />
-                <br />
-                <h3>Celebration of Quality--March 9, 2011--Northwest Missouri State
-            University</h3> Hatfield, N. J. (2011).
-                <br /> Raising Achievement Through Reading and Writing Mathematics
+                    does it <i>Really</i> Show?</a> (a.k.a. "UNICEF) (PowerPoint)</p>
+                <h3>Celebration of Quality--March 9, 2011--Northwest Missouri State University</h3>
+                <p>Hatfield, N. J. (2011). <br /> 
+                    Raising Achievement Through Reading and Writing Mathematics</p>
                 <br />
                 <br />
                 <h2 id="Applets"><a name="Applets"></a>Applets and Programs<br />
@@ -186,6 +152,63 @@
                 <br />
                 Hatfield, N. J. and Sander, G. (2017). StatCalc. An online calculator for calculating cumulative probabilities from common named distributions. Available: <a href="https://neilhatfield.github.io/statCalc/statcalc.html" target="_blank" class="bodylinks">https://neilhatfield.github.io/statCalc/statcalc.html</a> <br />
            </p>
+           <br />
+           <br />
+                <h2 id="Consulting"><a name="Consulting"></a>Statistical Consulting <br /></h2>
+          <ul>
+            <li><span style="font-family: Veranda;">Awhatukee Foothills Concert
+                Band--Membership Survey 2017<br />
+                Assisted in the generation of a survey that was then deployed to
+                the 2016-2017 membership of the AFCB and then analyzed the
+                results using common approaches as well as Latent Semantic
+                Analysis for analyzing open-ended survey items. <br />
+              </span></li>
+            <li><span style="font-family: Veranda;">Project CoMPASS--Flowing
+                Wells School District, Fall 2015–Spring 2016<br />
+                Conducted an analysis of the results from the Mathematical
+                Meanings for Teaching Secondary Mathematics Instrument to
+                evaluate the project's professional development intervention. <br />
+              </span></li>
+            <li><span style=" font-family: Veranda;">TUSD MSP High School
+                Mathematics Project--Tucson Unified School District &amp;
+                University of Arizona, Fall 2014–Summer 2015<br />
+              </span><span style="font-family: Veranda;">Conducted an analysis
+                of the results from the Mathematical Meanings for Teaching
+                Secondary Mathematics Instrument to evaluate the project's
+                professional development intervention.</span></li>
+            <li><span style=" font-family: Veranda;">Functions and Models:
+                Connecting Content, Standards, and Pedagogy--Northern Arizona
+                State University, Fall 2014–Summer 2015</span><br />
+              <span style="font-family: Veranda;">Conducted an analysis of the
+                results from the Mathematical Meanings for Teaching Secondary
+                Mathematics Instrument to evaluate the project's professional
+                development intervention.</span></li>
+            <li><span style=" font-family: Veranda;">Eggleston, M. J. (in
+                progress). A dissertation on conservation of resources and
+                psychological first aid with trauma survivors in the Phoenix
+                metropolitan area. Northcentral University, Ph.D. in Psychology.</span></li>
+            <li><span style="  font-family: Veranda;">Ramella, K.  (in
+                progress). A dissertation on the resiliency of firefighters in
+                the Phoenix metropolitan area in light of the firefighters'
+                positive and negative affect. Northcentral University, Ph.D. in
+                Psychology.</span></li>
+            <li><span style="   font-family: Veranda;"></span><span style="    font-family: Veranda;">Rembecki,
+                A. (2013). Action research paper on improving sight-singing
+                ability through the use of barbershop tags during instruction.
+                Northwest Missouri State University, M.S.Ed-Music.</span></li>
+            <li><span style="   font-family: Veranda;">Sullivan, B. (2012).
+                Evaluating the validity of the school motivation and learning
+                strategies inventory for english language learners. (Order No.
+                3511197, Walden University). ProQuest Dissertations and Theses,
+                199. Retrieved from
+                http://login.ezproxy1.lib.asu.edu/login?url=http://search.proquest.com/docview/1022498455?accountid=4485.
+                (1022498455), Ph.D. in Psychology.</span></li>
+            <li><span style="     font-family: Veranda;">Dollins, S. (2012).
+                Action research paper on differences in sight-singing methods
+                for gains in sight-singing ability. Northwest Missouri State
+                University, M.S.Ed-Music.<br />
+              </span></li>
+          </ul>
             </div>
             <div id="footer">
           <div align="center"><a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"
