--- a/teaching.html
+++ b/teaching.html
@@ -23,6 +23,7 @@
           <ul id="subnav">
             <li>Subnav:</li>
             <li><a href="#current"><em>Current Courses</em></a></li>
+            <li><a href="#readings"><em>Useful Readings</em></a></li>
             <li><a href="#applets"><em>Teaching Applets</em></a></li>
             <li><a href="#past"><em>Past Courses</em></a></li>
           </ul>
@@ -32,6 +33,16 @@
           </h2>
           <p>I'm not teaching any courses in Fall 2019.</p>
           <br />
+          <h2 id="readings"><a name="readings"></a>Useful Readings<br /></h2>
+          <p>The following readings are some that I have been developing for a number of semesters and reflect my most recent thinking in the various areas. I tend to update these files periodically so you'll want to check the files here to see if you have the most recent.  If you have constructive feedback, please feel free to send me your thoughts.</p>
+          <ul>
+              <li><a class="bodylinks" target="_blank" href="1_Resources/readings/Introduction_MeaningfulStatistics.pdf">Introduction to Meaningful Statistics</a></li>
+              <li><a class="bodylinks" target="_blank" href="1_Resources/readings/What_Is_Statistics.pdf">What is Statistics?</a></li>
+              <li><a class="bodylinks" target="_blank" href="1_Resources/readings/SAM_Units.pdf">On the Units of the <em>Sample Arithmetic Mean</em></a></li>
+              <li><a class="bodylinks" target="_blank" href="1_Resources/readings/On_Probability.pdf">On Probability</a></li>
+              <li><a class="bodylinks" target="_blank" href="1_Resources/readings/On_Moments.pdf">On Moments</a></li>
+              <li><a class="bodylinks" target="_blank" href="1_Resources/readings/On_Inference.pdf">On Statistical Inference</a></li>
+          </ul>
           <h2 id="applets"><a name="applets"></a>Teaching Applets<br /></h2>
           <p>The following are applets that I use in my teaching:</p>
           <ul>
@@ -78,7 +89,7 @@
           <h4>STP 231: Statistics for the Biosciences-Fall 2016</h4>
           <h4>MAT170: Pre-calculus-Summer 2016A, B</h4>
           <p>The Summer 2016 Pre-calculus courses are the products of
-            redesigning a research-based curriculum (Pathways to Precalculus) to
+            redesigning a research-based curriculum (Pathways to Pre-calculus) to
             emphasize co-variational and quantitative reasoning. During this
             course, students repeatedly had to reason about how different
             quantities' values co-varied in animations and video clips. Through
