--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@
         </div>
         <div id="contentnobars">
           <h2>Welcome</h2>
-          <h3>8/13/19: Please pardon the mess as I update my pages</h3>
           <p>I am an assistant research professor with the Department of Statistics at Pennsylvania State University's Eberly College of Science. My research passion lies within the realm of Statistics Education. This field is relatively young and is full of opportunities for understanding how individuals think about concepts in Statistics. My
             dissertation work focused on students' understanding of stochastic processes as they develop a conception of a stochastic variable's distribution. </p>
           <p>Prior to joining Penn State, I worked at the University of Northern Colorado as a Visiting Assistant Professor of Mathematics and as an Instructor for Arizona State University.</p>
           <br />
+          <h2>So What is Statistics Education?</h2>
+          <p>Statistics Education is the research field that is concerned with investigating, describing, and modeling how individuals think about and learn ideas in statistics. Our research products often inform the development of lessons, curriculum materials such as texts, videos, and applets, as well as contributing the growing knowledge base for how educators can support their students in developing particular meanings.</p>
+          <p>Statistics Education is not like Environmental Statistics, Biostatistics, Astrostatistics, Statistical Physics, or Geostatistics (to name a few). These fields are primarily concerned with the development and application of statistical methods within their respective disciplines. The education analog to these is Educational Statistics. While Statistics Education researchers can certainly use statistical methods, many of the most powerful studies involving using qualitative methods. This is one of the key ways that sets Statistics Education apart from these others fields.</p>
+          <p>Statistics Education is a relatively young field; I often point to the 2008 article "Introducing the Emerging Discipline of Statistics Education" by Ben-Zvi and Garfield as a key moment. While there had been significant work towards building the field prior to their article (some going back to the 1940s), Ben-Zvi and Garfield brought the field to light. Statistics Education grew out of two places: a group of statisticians trying to improve the teaching of statistics and mathematics education researchers who were interested in students' statistical thinking. Since Ben-Zvi and Garfield's article, there are increasing numbers of statisticians getting involved in Statistics Education research projects as well as calls to get more Science Education and Computer Science Education involved. In a way, Statistics Education is a multidisciplinary field.</p>
+          <br />
           <h2>Curriculum Vitae</h2>
-          <h3>Current Employment: Pennsylvannia State University</h3>
+          <h3>Current Employment: Pennsylvania State University</h3>
           <br />
           <b>Education: <br />
           </b>
@@ -68,61 +72,6 @@
                 Education and Career Goals</a></big><br />
             <br />
           </div>
-          <h3>Statistical Consulting</h3>
-          <ul>
-            <li><span style="font-family: Veranda;">Awhatukee Foothills Concert
-                Band--Membership Survey 2017<br />
-                Assisted in the generation of a survey that was then deployed to
-                the 2016-2017 membership of the AFCB and then analyzed the
-                results using common approaches as well as Latent Semantic
-                Analysis for analyzing open-ended survey items. <br />
-              </span></li>
-            <li><span style="font-family: Veranda;">Project CoMPASS--Flowing
-                Wells School District, Fall 2015–Spring 2016<br />
-                Conducted an analysis of the results from the Mathematical
-                Meanings for Teaching Secondary Mathematics Instrument to
-                evaluate the project's professional development intervention. <br />
-              </span></li>
-            <li><span style=" font-family: Veranda;">TUSD MSP High School
-                Mathematics Project--Tucson Unified School District &amp;
-                University of Arizona, Fall 2014–Summer 2015<br />
-              </span><span style="font-family: Veranda;">Conducted an analysis
-                of the results from the Mathematical Meanings for Teaching
-                Secondary Mathematics Instrument to evaluate the project's
-                professional development intervention.</span></li>
-            <li><span style=" font-family: Veranda;">Functions and Models:
-                Connecting Content, Standards, and Pedagogy--Northern Arizona
-                State University, Fall 2014–Summer 2015</span><br />
-              <span style="font-family: Veranda;">Conducted an analysis of the
-                results from the Mathematical Meanings for Teaching Secondary
-                Mathematics Instrument to evaluate the project's professional
-                development intervention.</span></li>
-            <li><span style=" font-family: Veranda;">Eggleston, M. J. (in
-                progress). A dissertation on conservation of resources and
-                psychological first aid with trauma survivors in the Phoenix
-                metropolitan area. Northcentral University, Ph.D. in Psychology.</span></li>
-            <li><span style="  font-family: Veranda;">Ramella, K.  (in
-                progress). A dissertation on the resiliency of firefighters in
-                the Phoenix metropolitan area in light of the firefighters'
-                positive and negative affect. Northcentral University, Ph.D. in
-                Psychology.</span></li>
-            <li><span style="   font-family: Veranda;"></span><span style="    font-family: Veranda;">Rembecki,
-                A. (2013). Action research paper on improving sight-singing
-                ability through the use of barbershop tags during instruction.
-                Northwest Missouri State University, M.S.Ed-Music.</span></li>
-            <li><span style="   font-family: Veranda;">Sullivan, B. (2012).
-                Evaluating the validity of the school motivation and learning
-                strategies inventory for english language learners. (Order No.
-                3511197, Walden University). ProQuest Dissertations and Theses,
-                199. Retrieved from
-                http://login.ezproxy1.lib.asu.edu/login?url=http://search.proquest.com/docview/1022498455?accountid=4485.
-                (1022498455), Ph.D. in Psychology.</span></li>
-            <li><span style="     font-family: Veranda;">Dollins, S. (2012).
-                Action research paper on differences in sight-singing methods
-                for gains in sight-singing ability. Northwest Missouri State
-                University, M.S.Ed-Music.<br />
-              </span></li>
-          </ul>
         </div>
         <div id="footer">
           <div align="center"><a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"
