Update of Website
Updated CSS (starting to trim code) and updated pages to start meeting new aesthetic

--- a/teaching.html
+++ b/teaching.html
@@ -13,7 +13,9 @@
         <div id="header">
           <div align="center"><img class="noborder" alt="neilh" src="1_Images/hatfield.jpg"
               style="width: 200px; height: 276px;" /></div>
+              <br/>
           <h1 style="text-align: center;">Neil J. Hatfield</h1>
+          <br/>
           <ul id="nav">
             <li><a href="index.html"><em>About Me</em></a></li>
             <li><a href="scholarlywork.html"><em>Scholarly Work</em></a></li>
@@ -63,32 +65,35 @@
           <h2 id="past"><a name="past"></a>Past Courses<br />
           </h2>
           <h3>University of Northern Colorado</h3>
-          <h4>MATH 550: Applied Probability and Statistics-Summer 2019</h4>
-          <h4>MED 701: Quantitative Methods in Mathematics Education-Spring 2019</h4>
-          <h4>STAT 150: Introduction to Statistics-Spring 2019</h4>
-          <h4>MATH 550: Applied Probability and Statistics-Fall 2019</h4>
-          <h4>STAT 150: Introduction to Statistics-Fall 2019</h4>
+          <ul>
+              <li>MATH 550: Applied Probability and Statistics-Summer 2019</li>
+              <li>MED 701: Quantitative Methods in Mathematics Education-Spring 2019</li>
+              <li>STAT 150: Introduction to Statistics-Spring 2019</li>
+              <li>MATH 550: Applied Probability and Statistics-Fall 2019</li>
+              <li>STAT 150: Introduction to Statistics-Fall 2019</li>
+            </ul>
           <h3>Arizona State University</h3>
-          <h4>STP 226: Elements of Statistics-Spring 2018</h4>
-          <h4>STP 231: Statistics for the Biosciences-Spring 2018</h4>
-          <h4>STP 420:Introductory Applied Statistics-Spring 2018</h4>
-          <p>These courses all serve as an introductory course to Statistics.  As is my trend in teaching statistics courses, this course focuses on integrating technology as
+          <ul>
+              <li>STP 226: Elements of Statistics-Spring 2018</li>
+              <li>STP 231: Statistics for the Biosciences-Spring 2018</li>
+              <li>STP 420:Introductory Applied Statistics-Spring 2018</li>
+              <p>These courses all serve as an introductory course to Statistics.  As is my trend in teaching statistics courses, this course focuses on integrating technology as
             well as modern approaches to Statistics.  Students leaving this
             course will have a solid foundation of core concepts in Statistics
             that will serve them well in later courses.  Students will work in
             groups to complete a semester long Data Analysis Project so that
             they have experience putting what they learn into practice, using
             real world data. </p>
-          <h4>STP 226: Elements of Statistics-Fall 2017, In-person</h4>
-          <h4>STP 226: Elements of Statistics-Fall 2017, Online</h4>
-          <h4>MAT 210: Brief Calculus-Fall 2017</h4>
-          <p>Brief Calculus, also known as Business Calculus, serves as a first
+              <li>STP 226: Elements of Statistics-Fall 2017, In-person</li>
+              <li>STP 226: Elements of Statistics-Fall 2017, Online</li>
+              <li>MAT 210: Brief Calculus-Fall 2017</li>
+              <p>Brief Calculus, also known as Business Calculus, serves as a first
             course in a calculus sequence that focuses on applications of the
             core ideas in calculus in the business world.</p>
-          <h4>STP 420: Introductory Applied Statistics-Spring 2017</h4>
-          <h4>STP 231: Statistics for the Biosciences-Fall 2016</h4>
-          <h4>MAT170: Pre-calculus-Summer 2016A, B</h4>
-          <p>The Summer 2016 Pre-calculus courses are the products of
+              <li>STP 420: Introductory Applied Statistics-Spring 2017</li>
+              <li>STP 231: Statistics for the Biosciences-Fall 2016</li>
+              <li>MAT170: Pre-calculus-Summer 2016, Sessions A and B</li>
+              <p>The Summer 2016 Pre-calculus courses are the products of
             redesigning a research-based curriculum (Pathways to Pre-calculus) to
             emphasize co-variational and quantitative reasoning. During this
             course, students repeatedly had to reason about how different
@@ -98,10 +103,11 @@
             and average-rate-of-change. Students learned how using this last
             tool could enable them to categorize different types of co-variation
             and build mathematical models that describe that co-variation.</p>
-          <h4>STP 231: Statistics for the Biosciences-Spring 2016</h4>
-          <h4>MTE 598: Research in Undergraduate Mathematics Education I-Fall 2015, Grad TA</h4>
-          <h4>STP 231: Statistics for the Biosciences-Spring 2014</h4>
-          <h4>MAT170: Pathways Pre-calculus-Fall 2013 </h4>
+              <li>STP 231: Statistics for the Biosciences-Spring 2016</li>
+              <li>MTE 598: Research in Undergraduate Mathematics Education I-Fall 2015, Grad TA</li>
+              <li>STP 231: Statistics for the Biosciences-Spring 2014</li>
+              <li>MAT170: Pathways Pre-calculus-Fall 2013 </li>
+            </ul>
         </div>
         <div id="footer">
           <div align="center"><a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"
