--- a/teaching.html
+++ b/teaching.html
@@ -31,9 +31,9 @@
           </ul>
         </div>
         <div id="contentnobars">
-          <h2 id="current"><a name="current"></a>Current Courses<br />
+          <h2 id="current"><a name="current"></a>Current Courses-Spring 2020<br />
           </h2>
-          <p>I'm not teaching any courses in Fall 2019.</p>
+            <p>Stat 461: Analysis of Variance. Check out the syllabus/FAQ <a href="syllabusStat461.html" class="bodylinks">here</a>.</p>
           <br />
           <h2 id="readings"><a name="readings"></a>Useful Readings<br /></h2>
           <p>The following readings are some that I have been developing for a number of semesters and reflect my most recent thinking in the various areas. I tend to update these files periodically so you'll want to check the files here to see if you have the most recent.  If you have constructive feedback, please feel free to send me your thoughts.</p>
@@ -114,7 +114,7 @@
                 src="1_Images/psu_mark.jpg"
                 class="noborder"
                 style="width: 318px; height: 85px;" /></a><br />
-            © 2019 Neil Hatfield <br />
+            © 2020 Neil Hatfield <br />
           </div>
         </div>
       </div>
