--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -124,6 +124,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="wrap-collabsible">
+                    <input id="faq41" class="toggle" type="checkbox">
+                    <label for="faq41" class="lbl-toggle" tabindex="0">What's the course schedule?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>I have prepare a <em>tentative</em> course schedule. Please keep in mind that this schedule can and will change to meet the needs of our class. These schedules load as PDFs.<br/>
+                                <a href="https://www.dropbox.com/s/u43qr60pbh357jv/MWFSchedule.pdf?dl=0" target="_blank" class="bodylinks">Section 1 (MWFs)</a><br/>
+                                <a href="https://www.dropbox.com/s/v307nbdlebob9w8/TRFSchedule.pdf?dl=0" target="_blank" class="bodylinks">Section 3 (TThFs)</a></p>
+                        </div>
+                    </div>
+                </div>
                 <h2>Key People</h2>
                 <div class="wrap-collabsible">
                     <input id="faq5" class="toggle" type="checkbox">
@@ -404,6 +415,15 @@
                             </ul>
                             <p>I will review each request on a case-by-case basis and get back to you with the extended due date that I grant you, which might not be the date you propose. Until you hear back from me, please do not assume that you have the extension. You may only ask for one extension per assignment.</p>
                             <p>If you find yourself asking for multiple extensions, please reach out to me to discuss what’s going on. I’ll do the same if I feel that you’ve made a large number of extension requests.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq40" class="toggle" type="checkbox">
+                    <label for="faq40" class="lbl-toggle" tabindex="0">How should I address my classmates?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>Many people might go by a name in daily life that is different from their legal name. In this classroom, we seek to refer to people by the names that they go by. Pronouns can be a way to affirm someone's gender identity, but they can also be unrelated to a person's identity. They are simply a public way in which to refer to a person in place of their name (e.g., "he" or "she" or "they" or "ze" or something else). In this classroom, I invite you (if you want) to share what name and pronouns you go by, and that as a class, we seek to refer to people using the pronouns that they share. The pronouns someone indicates are not necessarily indicative of their gender identity. Visit <a href="https://studentaffairs.psu.edu/campus-community-diversity/lgbtq-community/transgender-and-non-binary-penn-state" target="_blank" class="bodylinks">Trans and Non-Binary Penn State</a> page to learn more.</p>
                         </div>
                     </div>
                 </div>
