--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -180,6 +180,9 @@
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>We will make use of G. W. Oehlert's <em>A First Course in Design and Analysis of Experiments</em> as our main reference textbook. You do not need to purchase this book; you can download a copy of the book for free from <a href="http://users.stat.umn.edu/~gary/book/fcdae.pdf" target="_blank" class="bodylinks">here</a>.</p>
+                            <p>Additionally, there will be extra readings that I will provide throughout the semester. If you want to get started, here are two: <br />
+                            <a href="1_Resources/readings/Introduction_MeaningfulStatistics.pdf" target="_blank" class="bodylinks">Introduction to Meaningful Statistics</a> (a brief introduction to Statistics that will help you better understand my approach to teaching) <br/>
+                            <a href="1_Resources/readings/What_Is_Statistics.pdf" target="_blank" class="bodylinks">What is Statistics?</a> (This help you understand my approach to Statistics.)</p>
                         </div>
                     </div>
                 </div>
