--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -173,6 +173,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="wrap-collabsible">
+                    <input id="faq46" class="toggle" type="checkbox">
+                    <label for="faq46" class="lbl-toggle" tabindex="0">Is there anything I should know about Neil?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>If you want to know something about me, ask. The worst I'm going to say is I don't feel comfortable sharing that information with you. I try to be a relaxed guy but I'm passionate about my teaching and researching how students think about statistical concepts. I'm a stickler for people saying what they mean and meaning what they say; speaking with meaning is important to me. If you're having problems or just want to learn more, please come see me.</p>
+                            <p>Some fun tidbits about me: I enjoy biking/cycling, cooking/baking, and tying fun knots in my ties.</p>
+                        </div>
+                    </div>
+                </div>
                 <h2>Course Materials</h2>
                 <div class="wrap-collabsible">
                     <input id="faq8" class="toggle" type="checkbox">
@@ -222,6 +232,15 @@
                                 <li><a href="https://itunes.apple.com/us/app/socrative-student/id477618130" target="_blank" class="bodylinks">iPhone</a></li>
                             </ul>
                             <p>You can use a graphing calculator if you wish, but I don't recommend using it as your only technology.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq45" class="toggle" type="checkbox">
+                    <label for="faq45" class="lbl-toggle" tabindex="0">What is Socrative?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>The Socrative Student App is tool that I will use during class to ask warm up questions about material we've already gone over, to get you to start thinking about an idea we're going to go over, take attendance, and check how you are doing in the class. For the most part, Socrative is low-stakes in that you're not necessarily graded on your answers but I use them to help me see how you are all progressing.</p>
                         </div>
                     </div>
                 </div>
@@ -444,6 +463,44 @@
                                 <li><strong>Final Exam:</strong> There will be one (1) comprehensive Final Exam for you to complete at the end of the semester. You will work alone to complete the tasks to demonstrate your understanding and mastery of the course material. The class will decide whether to complete this in-person or as a take-home.</li>
                                 <li><strong>Course Project:</strong> Statistics is an interactive field where you must engage with data to help you develop ways of thinking that will serve you well in your future endeavors. Thus, there will be small projects as part of assignments and class activities as well as an on-going data analysis project this semester. I will provide further details in class.</li>
                             </ol>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq42" class="toggle" type="checkbox">
+                    <label for="faq42" class="lbl-toggle" tabindex="0">What do you mean by "assignments must look professional"?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>At this stage in your education, you need to practice presenting your work in as professional a manner as possible. This means that for homework, take home quizzes/tests/exams, and projects, your submitted work should be typed up. You may use any of the following methods (or their equivalent) to prepare your homework: Microsoft Word, RMarkdown, LaTeX, Google Docs, etc.</p>
+                            <p>Data visualizations should be computer generated. Some diagrams (e.g., Hasse diagrams) may be included as photos/scans of hand-drawn figures. However all figures should be part of your typed work.</p>
+                            <p>Quizzes and tests/exams completed in-class do not need to be typed.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq43" class="toggle" type="checkbox">
+                    <label for="faq43" class="lbl-toggle" tabindex="0">How do I format my assignments?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>You may format your assignments how you wish, but there are a few guidelines you should follow:</p>
+                            <ol type="1">
+                                <li>Include your name in the document. Sometimes I will print out assignments (particularly if they are short and I'm traveling) to grade. If you don't have your name in your document, then I'm going to skip grading the document and might not come back to that submission.</li>
+                                <li>Be consistent. Please be consistent in your choice font type and size. Same with spacing.</li>
+                                <li>Section your work. While you don't have to include the entire question/problem prompt in your submission, please include enough so that I know we're on the same page.</li>
+                                <li>Follow the assignment order. If a set of problems are given in a particular order, please stick with that order. This makes grading easier.</li>
+                                <li>Do not include raw code in your response; just include the relevant output which you then discuss. Any code that we ask for should appear at the end of the submission as an Appendix.</li>
+                                <li>If you include a figure or table, talk about the figure or table. You must write about anything and everything you add to your submission. You must go beyond saying "See Figure 1" or "(Table 1)". Discuss what you want the reader to extract from the figure/table and how that helps them better understand the problem.</li>
+                                <li>Please spell check.</li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq44" class="toggle" type="checkbox">
+                    <label for="faq44" class="lbl-toggle" tabindex="0">How do I submit my assignments?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>There will be two main ways that you submit your assignments: via Canvas uploads (be sure to verify the correct file type--usually DOCX or PDF) or in-person (for in-class quizzes, tests, exams).</p>
                         </div>
                     </div>
                 </div>
